--- a/0nyX/gtk-3.0/theme/infobar.css
+++ b/0nyX/gtk-3.0/theme/infobar.css
@@ -4,7 +4,7 @@ margin:2px;}
 infobar{
 border:1px solid @border_color;
 color:@text_color;
-font-weight:bold;
+font-weight:normal;
 background:@selected_bg_color;}
 .info{
 background:@info_color;}
