--- a/0nyX/gtk-3.0/theme/menubar.css
+++ b/0nyX/gtk-3.0/theme/menubar.css
@@ -4,7 +4,7 @@ padding:0px 1px;}
 
 menubar>menuitem,
 menubar>menuitem:backdrop{
-font-weight:bold;
+font-weight:normal;
 padding:3px 5px;}
 
 menubar>menuitem:hover,
@@ -14,6 +14,6 @@ background-color:shade(@bg_color,0.5);}
 
 menubar>menuitem>label,
 menubar>menuitem>label:backdrop{
-font-weight:bold;
+font-weight:normal;
 margin:0px;}
 
