--- a/0nyX/gtk-3.0/theme/xtra-gnome.css
+++ b/0nyX/gtk-3.0/theme/xtra-gnome.css
@@ -52,7 +52,7 @@ background-color:@selected_bg_color;
 border:1px solid @border_color;}
 .terminator-terminal-window viewport.frame label,
 .terminator-terminal-window viewport.frame label:backdrop  {
-font-weight:bold;}
+font-weight:normal;}
 
 /*a really ugly fix for brasero*/
 window.background>box.vertical>notebook>stack>box.vertical>paned.horizontal>box.vertical>box.vertical>notebook>stack>frame>widget,
